стим вывод и ошибка предмета --

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -192,6 +192,12 @@
     "status_sold": "Sold",
     "status_opened": "Opened",
     "item_withdraw_success": "Item \"{{itemName}}\" successfully sent for withdrawal!",
+    "cancel_withdrawal": "Cancel Withdrawal",
+    "cancelling_withdrawal": "Cancelling...",
+    "withdrawal_cancelled_success": "Withdrawal successfully cancelled. Item returned to inventory.",
+    "withdrawal_cancel_failed": "Failed to cancel withdrawal",
+    "withdrawal_cancel_error": "Error cancelling withdrawal",
+    "withdrawal_id_not_found": "Withdrawal ID not found",
     "opening": "Opening...",
     "items_suffix": " items",
     "cases_suffix": " cases",
