--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -196,6 +196,12 @@
     "status_sold": "Продан",
     "status_opened": "Открыт",
     "item_withdraw_success": "Предмет \"{{itemName}}\" успешно отправлен на вывод!",
+    "cancel_withdrawal": "Отменить вывод",
+    "cancelling_withdrawal": "Отменяем...",
+    "withdrawal_cancelled_success": "Вывод успешно отменён. Предмет возвращён в инвентарь.",
+    "withdrawal_cancel_failed": "Не удалось отменить вывод",
+    "withdrawal_cancel_error": "Ошибка при отмене вывода",
+    "withdrawal_id_not_found": "ID заявки на вывод не найден",
     "opening": "Открываем...",
     "items_suffix": " предметов",
     "cases_suffix": " кейсов",
