--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1026,8 +1026,8 @@
     "goal_description": "Соберите 3 символа в ряд (по горизонтали, вертикали или диагонали), чтобы выиграть!",
     "no_subscription_title": "Требуется статус",
     "no_subscription_message": "Приобретите статус для доступа к бонусной игре",
-    "already_won_title": "Вы уже победили сегодня!",
-    "already_won_message": "Вы уже получили бонусный кейс сегодня. Возвращайтесь завтра за новой игрой!"
+    "already_won_title": "Вы победили!",
+    "already_won_message": "Вы герой сегодняшнего дня! Ждём вас завтра"
   },
   "upgrade": {
     "title": "Апгрейд предметов",
