--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -166,7 +166,6 @@
     },
     "inventory_descriptions": {
       "active": "🎮 Ваши текущие предметы и неоткрытые кейсы",
-      "opened": "🎁 Предметы, полученные из открытых кейсов",
       "withdrawn": "📤 Предметы на выводе: ожидающие отправки и уже отправленные в Steam",
       "sold": "💰 Предметы, проданные за валюту или обмененные на статус"
     },
@@ -633,6 +632,10 @@
       "description": "Найдите 5 редких предметов"
     },
     "Найдите 3 предмета стоимостью от 100 руб": {
+      "name": "Премиум игрок",
+      "description": "Найдите 3 предмета стоимостью от 100 руб"
+    },
+    "Найдите 3 предмета стоимостью от 100 chiCoins": {
       "name": "Премиум игрок",
       "description": "Найдите 3 предмета стоимостью от 100 chiCoins"
     },
