--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -251,7 +251,7 @@
     "item_withdraw": {
       "withdrawing": "Выводим...",
       "withdraw_to_steam": "Вывести в Steam",
-      "subscription_required": "Требуется подписка",
+      "subscription_required": "Требуется статус",
       "need_trade_url": "Нужен Steam Trade URL",
       "cannot_withdraw": "Нельзя вывести в Steam",
       "provide_trade_url": "Укажите Steam Trade URL",
