--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -19,6 +19,9 @@
     "currency_suffix": " КР",
     "bonus_keyword": "бонус",
     "cases_available": "Кейсы доступны",
+    "next_case": "Следующий кейс",
+    "available_at_msk": "Доступен в 16:00 МСК",
+    "daily_reset_time": "Ежедневное обновление в 16:00 МСК",
     "hours_short": "ч",
     "minutes_short": "м",
     "seconds_short": "с",
@@ -999,7 +1002,7 @@
     "computer_thinking": "Компьютер думает...",
     "play_tic_tac_toe": "Играть в крестики-нолики",
     "close_game": "Закрыть игру",
-    "title": "Крестики-нолики",
+    "title": "Бонус игра",
     "move_error": "Ошибка при совершении хода",
     "you_won": "🎉 Вы выиграли!",
     "you_lost": "😞 Вы проиграли",
