--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1052,6 +1052,16 @@
   "onboarding": {
     "cases_title": "🎁 Cases",
     "cases_description": "Click on a case to see what's inside and open it! Each case contains unique items.",
+    "free_trial_title": "🎁 2 Days of Free Access!",
+    "free_trial_description": "Congratulations! You have 2 days of full free access to all features: opening cases, playing slots, safe cracker and tic-tac-toe. Let's show you all the features!",
+    "slot_title": "🎰 Slot Game",
+    "slot_description": "Try your luck at the slot machine! Spin the reels and win valuable items. You have free attempts!",
+    "safe_title": "💰 Safe Cracker",
+    "safe_description": "Crack the code and open the safe! Rewards await you inside. Try your luck!",
+    "tictactoe_title": "⭕❌ Tic-Tac-Toe",
+    "tictactoe_description": "Challenge the computer in this classic game! Winning will earn you a bonus case.",
+    "balance_title": "💎 Your Balance",
+    "balance_description": "Here you can see your balance. Use it to open premium cases and other activities. You can top up anytime!",
     "deposit_title": "💰 Deposit Balance",
     "deposit_description": "Here you can top up your balance to buy premium cases and also purchase status. By purchasing status you get free cases throughout your entire activity.",
     "skip": "Skip",
