--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1075,6 +1075,16 @@
   "onboarding": {
     "cases_title": "🎁 Кейсы",
     "cases_description": "Нажмите на кейс, чтобы посмотреть что внутри и открыть его! Каждый кейс содержит уникальные предметы.",
+    "free_trial_title": "🎁 2 Дня Бесплатного Доступа!",
+    "free_trial_description": "Поздравляем! У вас есть 2 дня полного бесплатного доступа ко всем возможностям: открытие кейсов, игры в слоты, сейф и крестики-нолики. Сейчас покажем все функции!",
+    "slot_title": "🎰 Игра в Слоты",
+    "slot_description": "Испытайте удачу в слот-машине! Крутите барабан и выигрывайте ценные предметы. У вас есть бесплатные попытки!",
+    "safe_title": "💰 Взлом Сейфа",
+    "safe_description": "Подберите правильный код и откройте сейф! Внутри вас ждут награды. Попробуйте свою удачу!",
+    "tictactoe_title": "⭕❌ Крестики-Нолики",
+    "tictactoe_description": "Сразитесь с компьютером в классической игре! Победа принесет вам бонусный кейс.",
+    "balance_title": "💎 Ваш Баланс",
+    "balance_description": "Здесь отображается ваш баланс. Используйте его для открытия премиум кейсов и других активностей. Пополнить можно в любое время!",
     "deposit_title": "💰 Пополнение баланса",
     "deposit_description": "Здесь вы можете пополнить баланс для покупки премиум кейсов, а так же покупки статуса. Покупая статус вы получаете бесплатные кейсы на протяжении всей вашей активности.",
     "skip": "Пропустить",
