--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -20,8 +20,8 @@
     "bonus_keyword": "бонус",
     "cases_available": "Кейсы доступны",
     "next_case": "Следующий кейс",
-    "available_at_msk": "Доступен в 16:00 МСК",
-    "daily_reset_time": "Ежедневное обновление в 16:00 МСК",
+    "available_at_msk": "Доступен в 16:00",
+    "daily_reset_time": "Ежедневное обновление в 16:00",
     "hours_short": "ч",
     "minutes_short": "м",
     "seconds_short": "с",
@@ -1093,7 +1093,7 @@
     "safe_title": "💰 Взлом Сейфа",
     "safe_description": "Подберите правильный код и откройте сейф! Внутри вас ждут награды. Попробуйте свою удачу!",
     "tictactoe_title": "⭕❌ Крестики-Нолики",
-    "tictactoe_description": "Сразитесь с компьютером в классической игре! Победа принесет вам бонусный кейс.",
+    "tictactoe_description": "Сразитесь! Победа принесет вам бонусный кейс.",
     "balance_title": "💎 Ваш Баланс",
     "balance_description": "Здесь отображается ваш баланс. Используйте его для открытия премиум кейсов и других активностей. Пополнить можно в любое время!",
     "deposit_title": "💰 Пополнение баланса",
