- статус для новых

--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -589,7 +589,7 @@
     "going_to_subscription_payment": "Переходим к оплате статуса...",
     "status_purchased": "Статус успешно приобретен!",
     "attempts_per_day": "попыток в день",
-    "daily_attempts": "попыток",
+    "daily_attempts": "попытки",
     "tic_tac_toe_attempts": "Крестики-нолики",
     "safe_cracker_attempts": "Взлом сейфа",
     "slots_attempts": "Игра в слоты",
