--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -61,7 +61,8 @@
     "market": "Market",
     "coin_flip": "Coin Flip",
     "crash": "Crash",
-    "upgrade": "Upgrade"
+    "upgrade": "Upgrade",
+    "online": "online"
   },
   "auth": {
     "login_title": "Sign In",
