--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1102,5 +1102,35 @@
     "skip": "Пропустить",
     "next": "Далее",
     "finish": "Завершить"
+  },
+  "footer": {
+    "stats": {
+      "cases_opened": "Открыто кейсов",
+      "users": "Пользователей",
+      "upgrades": "Апгрейдов",
+      "games_played": "Игр сыграно"
+    },
+    "tagline": "Лучшая платформа для открытия кейсов",
+    "description": "ChiBox - это лучший сервис для открытия кейсов. Присоединяйтесь к тысячам игроков и получайте уникальные предметы каждый день!",
+    "sections": {
+      "company": "Компания",
+      "legal": "Юридическая информация",
+      "support": "Поддержка"
+    },
+    "links": {
+      "about": "О нас",
+      "contacts": "Контакты",
+      "faq": "FAQ",
+      "terms": "Условия использования",
+      "privacy": "Политика конфиденциальности",
+      "responsible_gaming": "Ответственная игра"
+    },
+    "email_label": "Email поддержки:",
+    "working_hours": "Часы работы:",
+    "chi_coin_title": "Зарабатывай ChiCoins",
+    "chi_coin_description": "Открывай кейсы, выполняй задания и получай ChiCoins — внутриигровую валюту ChiBox!",
+    "rights_reserved": "Все права защищены.",
+    "age_restriction": "18+",
+    "licensed": "Лицензированная платформа"
   }
 }
