--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -176,9 +176,9 @@
       "level_drop_bonus": "Повышение уровня увеличивает бонус к дропу: +0.02% за каждый уровень"
     },
     "inventory_descriptions": {
-      "active": "🎮 Ваши текущие предметы и неоткрытые кейсы",
-      "withdrawn": "📤 Предметы на выводе: ожидающие отправки и уже отправленные в Steam",
-      "sold": "💰 Предметы, проданные за валюту или обмененные на статус"
+      "active": "Ваши текущие предметы и неоткрытые кейсы",
+      "withdrawn": "Предметы на выводе: ожидающие отправки и уже отправленные в Steam",
+      "sold": "Предметы, проданные за валюту или обмененные на статус"
     },
     "loading_inventory": "Загрузка инвентаря...",
     "loading_more": "Загрузка еще...",
@@ -754,7 +754,7 @@
     "completed": "Выполнено"
   },
   "roulette": {
-    "wheel_of_fortune": "🎰 Колесо Фортуны",
+    "wheel_of_fortune": "Колесо Фортуны",
     "spin_and_win": "Крути колесо и выигрывай дни статуса!",
     "games_per_day": "30 игр в день • Перезарядка каждые 48 минут",
     "next_game_in": "Следующая игра через:",
@@ -805,9 +805,9 @@
     "no_status": "НЕТ",
     "exchange_rate": "КУРС",
     "tier": "Тариф {{tier}}",
-    "sell_mode": "💰 ПРОДАЖА",
-    "exchange_mode": "⭐ ОБМЕН",
-    "search_placeholder": "🔍 Поиск предметов...",
+    "sell_mode": "ПРОДАЖА",
+    "exchange_mode": "ОБМЕН",
+    "search_placeholder": "Поиск предметов...",
     "all_rarities": "Все редкости",
     "show_info": "▶ Показать информацию о тарифах",
     "hide_info": "▼ Скрыть информацию",
@@ -988,7 +988,7 @@
     "bonus_available": "Доступен бонус"
   },
   "live_drops": {
-    "title": "🔥 Последние дропы",
+    "title": "Последние дропы",
     "player_won": "{{player}} выиграл",
     "just_now": "только что",
     "minutes_ago": "{{minutes}} мин. назад",
@@ -1092,19 +1092,19 @@
     "no_upgrade_options": "Нет вариантов апгрейда для этого предмета"
   },
   "onboarding": {
-    "cases_title": "🎁 Кейсы",
+    "cases_title": "Кейсы",
     "cases_description": "Нажмите на кейс, чтобы посмотреть что внутри и открыть его! Каждый кейс содержит уникальные предметы.",
-    "free_trial_title": "🎁 2 Дня Бесплатного Доступа!",
+    "free_trial_title": "2 Дня Бесплатного Доступа!",
     "free_trial_description": "Поздравляем! У вас есть 2 дня полного бесплатного доступа ко всем возможностям: открытие кейсов, игры в слоты, сейф и крестики-нолики. Сейчас покажем все функции!",
-    "slot_title": "🎰 Игра в Слоты",
+    "slot_title": "Игра в Слоты",
     "slot_description": "Испытайте удачу в слот-машине! Крутите барабан и выигрывайте ценные предметы. У вас есть бесплатные попытки!",
-    "safe_title": "💰 Взлом Сейфа",
+    "safe_title": "Взлом Сейфа",
     "safe_description": "Подберите правильный код и откройте сейф! Внутри вас ждут награды. Попробуйте свою удачу!",
-    "tictactoe_title": "⭕❌ Крестики-Нолики",
+    "tictactoe_title": "Крестики-Нолики",
     "tictactoe_description": "Сразитесь! Победа принесет вам бонусный кейс.",
-    "balance_title": "💎 Ваш Баланс",
+    "balance_title": "Ваш Баланс",
     "balance_description": "Здесь отображается ваш баланс. Используйте его для открытия премиум кейсов и других активностей. Пополнить можно в любое время!",
-    "deposit_title": "💰 Пополнение баланса",
+    "deposit_title": "Пополнение баланса",
     "deposit_description": "Здесь вы можете пополнить баланс для покупки премиум кейсов, а так же покупки статуса. Покупая статус вы получаете бесплатные кейсы на протяжении всей вашей активности.",
     "skip": "Пропустить",
     "next": "Далее",
@@ -1141,4 +1141,3 @@
     "licensed": "Лицензированная платформа"
   }
 }
-
