--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -177,6 +177,7 @@
     },
     "inventory_descriptions": {
       "active": "Ваши текущие предметы и неоткрытые кейсы",
+      "opened": "Открытые кейсы: кейсы, которые вы уже открыли и получили предметы",
       "withdrawn": "Предметы на выводе: ожидающие отправки и уже отправленные в Steam",
       "sold": "Предметы, проданные за валюту или обмененные на статус"
     },
@@ -258,6 +259,9 @@
     "level_max": "100",
     "xp_earned_for": "Опыт начисляется за:",
     "opening_cases": "Открытие кейсов",
+    "click_to_change_avatar": "Нажмите, чтобы изменить аватар",
+    "weapon_type": "Тип:",
+    "weapon_type_default": "Оружие",
 
     "item_withdraw": {
       "withdrawing": "Выводим...",
