продажа без цифр и иконок

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -822,9 +822,9 @@
     "item_sell_price": "Sale:",
     "item_subscription_days": "Status:",
     "days_few": "Low",
-    "sell_for": "💸 Sell for {{price}}₽",
+    "sell_for": "Sell",
     "selling": "Selling...",
-    "exchange_for": "⭐ Exchange for {{days}}",
+    "exchange_for": "Exchange",
     "exchanging": "Exchanging...",
     "too_cheap": "❌ Too cheap",
     "rarity_covert": "COVERT",
