--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -845,9 +845,9 @@
     "item_sell_price": "Продажа:",
     "item_subscription_days": "Статус:",
     "days_few": "Мало",
-    "sell_for": "💸 Продать за {{price}}₽",
+    "sell_for": "Продать",
     "selling": "Продаём...",
-    "exchange_for": "⭐ Обменять на {{days}}",
+    "exchange_for": "Обменять",
     "exchanging": "Обмениваем...",
     "too_cheap": "❌ Слишком дешевый",
     "rarity_covert": "СЕКРЕТНОЕ",
