лишние слова (слот, ставка)

--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -959,7 +959,7 @@
     "rule_1": "Сделайте ставку и начните игру",
     "rule_2": "Соберите 3 символа в ряд, чтобы выиграть",
     "rule_3": "При победе вы получаете удвоенную ставку",
-    "rule_4": "При поражении или ничьей ставка сгорает"
+    "rule_4": "При поражении или ничьей попытка сгорает"
   },
   "modal": {
     "confirm": "Подтвердить",
