--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -486,7 +486,7 @@
     "error_marking_all_read": "Ошибка при отметке всех уведомлений как прочитанных:",
     "notification_types": {
       "case_purchase": "Покупка кейсов",
-      "case_purchase_message": "Вы успешно купили {{count}} кейс(ов) за {{amount}}₽",
+      "case_purchase_message": "Вы успешно купили {{count}} кейс(ов) за {{amount}} ChiCoins",
       "level_up": "Повышение уровня",
       "level_up_message": "Поздравляем! Вы достигли уровня {{level}}. Бонус к шансу дорогих предметов: +{{bonus}}%",
       "new_case_received": "Новый кейс получен!",
@@ -494,7 +494,7 @@
       "case_opened": "Кейс открыт",
       "case_opened_message": "Вы открыли кейс и получили: {{itemName}}",
       "bonus_claimed": "Бонус получен",
-      "bonus_claimed_message": "Вы получили бонус: {{amount}}₽",
+      "bonus_claimed_message": "Вы получили бонус: {{amount}} ChiCoins",
       "achievement_unlocked": "Достижение разблокировано",
       "achievement_unlocked_message": "Поздравляем! Вы разблокировали достижение: {{achievementName}}",
       "subscription_activated": "Статус активирован",
@@ -504,7 +504,7 @@
       "item_withdrawn": "Предмет выведен",
       "item_withdrawn_message": "Предмет {{itemName}} успешно отправлен в Steam",
       "item_sold": "Предмет продан",
-      "item_sold_message": "Предмет {{itemName}} продан за {{amount}}₽",
+      "item_sold_message": "Предмет {{itemName}} продан за {{amount}} ChiCoins",
       "welcome": "Добро пожаловать!",
       "welcome_message": "Добро пожаловать в ChiBox! Получите свой первый бонус и начните играть!"
     }
@@ -585,10 +585,10 @@
     "balance_top_up": "Пополнение баланса",
     "or_enter_custom": "Или введите свою сумму:",
     "enter_amount": "Введите сумму",
-    "minimum_deposit_info": "• Минимальная сумма пополнения: 100 ₽",
+    "minimum_deposit_info": "• Минимальная сумма пополнения: 100 ChiCoins",
     "deposit_info": "• Средства поступят на баланс после успешной оплаты",
     "cards_supported": "• Поддерживаются банковские карты",
-    "top_up_for": "Пополнить на {{amount}} ₽",
+    "top_up_for": "Пополнить на {{amount}} ChiCoins",
     "creating_payment": "Создание платежа...",
     "select_subscription": "Выберите статус",
     "subscription_description": "Статус дает бонус к шансу выпадения редких предметов и ежедневные бесплатные кейсы и многое другое",
@@ -610,7 +610,7 @@
     "all_bonuses_access": "Доступ ко всем бонусам",
     "drop_chance_bonus": "К шансу выпадения",
     "enter_correct_amount": "Введите корректную сумму для пополнения",
-    "minimum_amount": "Минимальная сумма пополнения: 100 рублей",
+    "minimum_amount": "Минимальная сумма пополнения: 100 ChiCoins",
     "payment_error": "Ошибка при создании платежа",
     "subscription_error": "Ошибка при покупке статуса"
   },
@@ -818,13 +818,13 @@
     "exchange_rates_title": "Тарифы обмена",
     "exchange_rates_description": "Подробная информация о ценах и условиях обмена",
     "tier_1_title": "Тариф 1 (Статус)",
-    "tier_1_price": "200₽ за день",
+    "tier_1_price": "200 ChiCoins за день",
     "tier_1_description": "Базовая подписка",
     "tier_2_title": "Тариф 2 (Статус+)",
-    "tier_2_price": "200₽ за день",
+    "tier_2_price": "200 ChiCoins за день",
     "tier_2_description": "Улучшенная подписка",
     "tier_3_title": "Тариф 3 (Статус++)",
-    "tier_3_price": "350₽ за день",
+    "tier_3_price": "350 ChiCoins за день",
     "tier_3_description": "Премиум подписка",
     "important_conditions": "Важные условия:",
     "min_exchange_price": "Минимальная стоимость предмета для обмена: {{price}}₽",
