--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -62,6 +62,7 @@
     "coin_flip": "Coin Flip",
     "crash": "Crash",
     "upgrade": "Upgrade",
+    "tower_defense": "Tower Defense",
     "online": "online"
   },
   "auth": {
