--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -59,7 +59,8 @@
     "marketplace": "Place de marché",
     "coin_flip": "Pile ou Face",
     "crash": "Crash",
-    "upgrade": "Amélioration"
+    "upgrade": "Amélioration",
+    "tower_defense": "Défense de Tour"
   },
   "auth": {
     "login_title": "Se connecter",
