--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -91,7 +91,8 @@
     "marketplace": "マーケットプレイス",
     "coin_flip": "コインフリップ",
     "crash": "クラッシュ",
-    "upgrade": "アップグレード"
+    "upgrade": "アップグレード",
+    "tower_defense": "タワーディフェンス"
   },
   "auth": {
     "login_title": "ログイン",
