--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -64,6 +64,7 @@
     "coin_flip": "Монетка",
     "crash": "Краш",
     "upgrade": "Апгрейд",
+    "tower_defense": "Боевой поход",
     "online": "онлайн"
   },
   "auth": {
