--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1150,5 +1150,18 @@
     "rights_reserved": "Все права защищены.",
     "age_restriction": "18+",
     "licensed": "Лицензированная платформа"
+  },
+  "cookies": {
+    "title": "Мы используем cookies",
+    "description": "Мы используем необходимые cookies для обеспечения правильной аутентификации и безопасности вашего аккаунта. Эти cookies необходимы для работы сайта и не могут быть отключены.",
+    "essential_title": "Необходимые Cookies",
+    "essential_description": "Токены аутентификации (httpOnly cookies) для безопасного входа и управления сессией. Эти cookies защищают ваш аккаунт и хранятся безопасно.",
+    "duration": "Срок хранения",
+    "duration_value": "Сессионные cookies (удаляются после закрытия браузера) и долгосрочные cookies (до 30 дней с вашего согласия)",
+    "purpose": "Назначение",
+    "purpose_value": "Аутентификация пользователя, безопасность сессии, защита от несанкционированного доступа",
+    "accept": "Понятно",
+    "learn_more": "Подробнее",
+    "hide_details": "Скрыть детали"
   }
 }
