--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -5,6 +5,7 @@
     "success": "Успешно",
     "cancel": "Отмена",
     "confirm": "Подтвердить",
+    "apply": "Применить",
     "save": "Сохранить",
     "delete": "Удалить",
     "edit": "Редактировать",
@@ -322,6 +323,15 @@
       "click_to_connect": "Нажмите для подключения",
       "email_verification_label": "Email подтверждение",
       "email_verified": "Email подтвержден",
+      "email_not_verified": "Email не подтвержден",
+      "no_email": "Email не указан",
+      "verify": "Подтвердить",
+      "email_placeholder": "example@email.com",
+      "invalid_email": "Неверный формат email",
+      "email_updated_verify_required": "Email обновлен. Требуется подтверждение.",
+      "email_will_be_saved": "Email будет сохранен при нажатии кнопки \"Сохранить\"",
+      "email_change_note": "После изменения email потребуется повторная верификация",
+      "trade_url_set": "Установлен",
       "verify_email_button": "Подтвердить Email",
       "click_to_send_code": "Нажмите для отправки кода",
       "saving": "Сохранение...",
@@ -331,6 +341,7 @@
       "trade_url_manual_instructions": "Получите Trade URL вручную",
       "trade_url_fetch_error": "Не удалось получить Trade URL. Попробуйте позже.",
       "trade_url_fetch_network_error": "Ошибка при получении Trade URL",
+      "steam_email_cannot_verify": "Steam email не может быть подтвержден. Укажите свой реальный email.",
       "email_verification_modal": {
         "title": "Подтверждение Email",
         "send_code_to": "Отправим код подтверждения на:",
