купить статус в превью кейса

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -905,6 +905,8 @@
     "open": "Open",
     "buy_and_open": "Buy and Open",
     "open_case": "Open Case",
+    "buy_status_link": "Buy status",
+    "status_required_short": "Status required",
     "buying": "Buying...",
     "opening": "Opening...",
     "going_to_payment": "Going to payment...",
